# pt1-exam-preparation

./: .gitignore  LICENSE  README.md
Complex/: CMakeLists.txt  complex.cpp  complex.hpp  main.cpp
Container/: main.cpp  myIterator.hpp  sarray.hpp
Container/include/: myIterator.hpp
Container/solutions/: CMakeLists.txt  my_iterator.hpp  sarray.hpp
Container/src/: myIterator.cpp
Containers/: CMakeLists.txt
Containers/include/: container.hpp
Containers/include/pt1/: Timer.hpp
Containers/src/: main.cpp
Iterators/: CMakeLists.txt
Lotka_Volterra/: .gitignore  main.py
Penna_Simulation/: CMakeLists.txt  README.md
Penna_Simulation/doc/Simulation_results/: .gitignore  parameter.txt
Penna_Simulation/include/: simulation.hpp
Penna_Simulation/include/Penna/: animal.hpp  genome.hpp  population.hpp  simulation.hpp
Penna_Simulation/include/pt1/: Random.hpp  Timer.hpp
Penna_Simulation/src/: main.cpp  simulation.cpp
Penna_Simulation/src/Penna/: animal.cpp  genome.cpp  population.cpp  simulation.cpp
Penna_Simulation/test/: animal_test_advanced_initialization.cpp  animal_test_basic_initialization.cpp  animal_test_copy_constructor.cpp  animal_test_default_constructor.cpp  genome_test_copy_constructor.cpp  genome_test_default_constructor.cpp  population_test_default_constructor.cpp  population_test_functionality.cpp  test_animal.cpp  test_genome.cpp  test_population.cpp
STL_algorithms/: CMakeLists.txt  main.cpp
STL_algorithms/include/: container.hpp
Simpson/: CMakeLists.txt  README.md
Simpson/include/: simpson.hpp
Simpson/include/Simpson/: simpson.hpp
Simpson/include/pt1/: Complex.hpp
Simpson/src/: Timer.cpp  polynomial.cpp  simpson.cpp  trash.txt
Simpson/test/: polynomial.cpp  polynomial.hpp  test_benchmark.cpp  test_check_precondition.cpp  test_function_class.cpp  test_function_object.cpp  test_function_pointer.cpp  test_integrate.cpp  test_integrate2d.cpp  test_polynomial.cpp  test_sine.cpp  trash.txt
Z2_Group/: .gitignore  CMakeLists.txt  README.md  Z2  z2_group.cpp
playground/: CMakeLists.txt  main.cpp
playground/c++/: main.cpp
pt1_Library/: CMakeLists.txt  README.md
pt1_Library/include/: Random.hpp  Timer.hpp
pt1_Library/src/: Complex.cpp  Random.cpp  Timer.cpp
pt1_Library/test/: complex_test_arithmetic.cpp  complex_test_assignment.cpp  complex_test_constructor.cpp  complex_test_logical.cpp  random_test_initialization.cpp  test_complex.cpp  test_random.cpp  test_timer.cpp  timer_test_data.cpp  timer_test_isMeasuring.cpp  timer_test_precision.cpp  timer_test_reset.cpp  timer_test_start_and_stop.cpp
pyPenna/: main.py
pyPenna/solutions/: main.py  plot.py
pyPenna/solutions/pypenna/: __init__.py  animal.py  fishing.py  genome.py  population.py
pyPenna/src/: __init__.py  animal.py  genome.py  population.py  simulation.py
